// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button Snapshot Tests > matches snapshot for button with all props 1`] = `
<button
  class="font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 bg-gray-200 text-gray-900 hover:bg-gray-300 focus:ring-gray-500 disabled:bg-gray-100 px-6 py-3 text-lg cursor-not-allowed opacity-50 custom-class"
  disabled=""
>
  Complex Button
</button>
`;

exports[`Button Snapshot Tests > matches snapshot for danger button 1`] = `
<button
  class="font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 bg-red-600 text-white hover:bg-red-700 focus:ring-red-500 disabled:bg-red-300 px-4 py-2 text-base cursor-pointer "
>
  Danger Button
</button>
`;

exports[`Button Snapshot Tests > matches snapshot for disabled button 1`] = `
<button
  class="font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 bg-blue-600 text-white hover:bg-blue-700 focus:ring-blue-500 disabled:bg-blue-300 px-4 py-2 text-base cursor-not-allowed opacity-50 "
  disabled=""
>
  Disabled Button
</button>
`;

exports[`Button Snapshot Tests > matches snapshot for large button 1`] = `
<button
  class="font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 bg-blue-600 text-white hover:bg-blue-700 focus:ring-blue-500 disabled:bg-blue-300 px-6 py-3 text-lg cursor-pointer "
>
  Large Button
</button>
`;

exports[`Button Snapshot Tests > matches snapshot for primary button 1`] = `
<button
  class="font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 bg-blue-600 text-white hover:bg-blue-700 focus:ring-blue-500 disabled:bg-blue-300 px-4 py-2 text-base cursor-pointer "
>
  Primary Button
</button>
`;

exports[`Button Snapshot Tests > matches snapshot for secondary button 1`] = `
<button
  class="font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 bg-gray-200 text-gray-900 hover:bg-gray-300 focus:ring-gray-500 disabled:bg-gray-100 px-4 py-2 text-base cursor-pointer "
>
  Secondary Button
</button>
`;

exports[`Button Snapshot Tests > matches snapshot for small button 1`] = `
<button
  class="font-semibold rounded-lg transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 bg-blue-600 text-white hover:bg-blue-700 focus:ring-blue-500 disabled:bg-blue-300 px-3 py-1.5 text-sm cursor-pointer "
>
  Small Button
</button>
`;
